syntax = "proto3";

package docreader;

option go_package = "github.com/Tencent/WeKnora/internal/docreader/proto";

// Document reading service
service DocReader {
  // Read document from file
  rpc ReadFromFile(ReadFromFileRequest) returns (ReadResponse) {}
  // Read document from URL
  rpc ReadFromURL(ReadFromURLRequest) returns (ReadResponse) {}
}

// Object storage provider
enum StorageProvider {
  STORAGE_PROVIDER_UNSPECIFIED = 0;
  COS = 1;     // Tencent Cloud COS
  MINIO = 2;   // MinIO/S3 compatible
}

// Generic object storage configuration, compatible with COS and MinIO
message StorageConfig {
  StorageProvider provider = 1;   // Storage provider
  string region = 2;              // Region (used by COS)
  string bucket_name = 3;         // Bucket name
  string access_key_id = 4;       // Access key ID (used by MinIO/S3)
  string secret_access_key = 5;   // Secret access key (used by MinIO/S3)
  string app_id = 6;              // Application ID (used by COS)
  string path_prefix = 7;         // Path prefix
}

// VLM configuration
message VLMConfig {
  string model_name = 1;     // VLM Model Name
  string base_url = 2;       // VLM Base URL
  string api_key = 3;        // VLM API Key
  string interface_type = 4; // VLM Interface Type: "ollama" or "openai"
}

message ReadConfig {
  int32 chunk_size = 1;    // Chunk size
  int32 chunk_overlap = 2; // Chunk overlap
  repeated string separators = 3;    // Separators
  bool enable_multimodal = 4; // Multimodal processing
  StorageConfig storage_config = 5;   // Object storage configuration (generic)
  VLMConfig vlm_config = 6;   // VLM configuration
}

// Read document from file request
message ReadFromFileRequest {
  bytes file_content = 1;  // File content
  string file_name = 2;    // File name
  string file_type = 3;    // File type
  ReadConfig read_config = 4; 
  string request_id = 5;
}

// Read document from URL request
message ReadFromURLRequest {
  string url = 1;          // Document URL
  string title = 2;        // Title
  ReadConfig read_config = 3; 
  string request_id = 4;
}

// Image information
message Image {
  string url = 1;           // Image URL
  string caption = 2;       // Image caption/description
  string ocr_text = 3;      // Text content extracted via OCR
  string original_url = 4;  // Original image URL
  int32 start = 5;          // Start position of image in text
  int32 end = 6;            // End position of image in text
}

message Chunk {
  string content = 1;     // Chunk content
  int32 seq = 2;          // Chunk sequence in document
  int32 start = 3;        // Start position of chunk in document
  int32 end = 4;          // End position of chunk in document
  repeated Image images = 5; // Image information contained in chunk
}

// Read document from URL response
message ReadResponse {
  repeated Chunk chunks = 1; // Document chunks
  string error = 2;          // Error message
} 